--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "js-cookie": "^3.0.5",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-fontawesome": "^0.0.2",
