--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "js-cookie": "^3.0.5",
     "pinia": "^2.1.6",
+    "pinia-plugin-persist": "^1.0.0",
     "vue": "^3.3.4",
     "vue-fontawesome": "^0.0.2",
     "vue-router": "^4.2.4"
