--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-vue": "^9.17.0",
     "prettier": "^3.0.0",
+    "stylelint": "^15.10.3",
+    "stylelint-config-standard": "^34.0.0",
     "vite": "^4.4.9"
   }
 }
